20010806
 - OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/07/22 21:32:27
     [sshpty.c]
     update comment
   - pvalchev@cvs.openbsd.org 2001/07/22 21:32:42
     [ssh.1]
     There is no option "Compress", point to "Compression" instead; ok 
     markus
   - markus@cvs.openbsd.org 2001/07/22 22:04:19
     [readconf.c ssh.1]
     enable challenge-response auth by default; ok millert@
   - markus@cvs.openbsd.org 2001/07/22 22:24:16
     [sshd.8]
     Xr login.conf
   - markus@cvs.openbsd.org 2001/07/23 09:06:28
     [sshconnect2.c]
     reorder default sequence of userauth methods to match ssh behaviour:
     hostbased,publickey,keyboard-interactive,password
   - markus@cvs.openbsd.org 2001/07/23 12:47:05
     [ssh.1]
     sync PreferredAuthentications
   - aaron@cvs.openbsd.org 2001/07/23 14:14:18
     [ssh-keygen.1]
     Fix typo.
   - stevesk@cvs.openbsd.org 2001/07/23 18:14:58
     [auth2.c auth-rsa.c]
     use %lu; ok markus@
   - stevesk@cvs.openbsd.org 2001/07/23 18:21:46
     [xmalloc.c]
     no zero size xstrdup() error; ok markus@
   - markus@cvs.openbsd.org 2001/07/25 11:59:35
     [scard.c]
     typo in comment
   - markus@cvs.openbsd.org 2001/07/25 14:35:18
     [readconf.c ssh.1 ssh.c sshconnect.c]
     cleanup connect(); connection_attempts 4 -> 1; from 
     eivind@freebsd.org
   - stevesk@cvs.openbsd.org 2001/07/26 17:18:22
     [sshd.8 sshd.c]
     add -t option to test configuration file and keys; pekkas@netcore.fi
     ok markus@
   - rees@cvs.openbsd.org 2001/07/26 20:04:27
     [scard.c ssh-keygen.c]
     Inquire Cyberflex class for 0xf0 cards
     change aid to conform to 7816-5
     remove gratuitous fid selects
   - millert@cvs.openbsd.org 2001/07/27 14:50:45
     [ssh.c]
     If smart card support is compiled in and a smart card is being used
     for authentication, make it the first method used.  markus@ OK
   - deraadt@cvs.openbsd.org 2001/07/27 17:26:16
     [scp.c]
     shorten lines
   - markus@cvs.openbsd.org 2001/07/28 09:21:15