@@ -1,0 +1,13 @@
+/* $Id: inet_ntop.h,v 1.3 2001/08/07 22:29:10 tim Exp $ */
+
+#ifndef _BSD_RRESVPORT_H
+#define _BSD_RRESVPORT_H
+
+#include "config.h"
+
+#ifndef HAVE_INET_NTOP
+const char *                 
+inet_ntop(int af, const void *src, char *dst, size_t size);
+#endif /* !HAVE_INET_NTOP */
+
+#endif /* _BSD_RRESVPORT_H */
